# warpcore

./: Cargo.toml  README.md
src/: analyzer.rs  brain.rs  lib.rs
tests/: idl_snapshots.rs
tests/fixtures/: idl_directory.snapshot.json  idl_single.json  idl_single.snapshot.json
tests/fixtures/idl_directory/: a.json  b.json
