[package]
name = "warpcore"
version = "0.1.0"
edition = "2021"
description = "Solana program parallelism analyzer — find account-lock conflicts before they hit mainnet."

[[bin]]
name = "warpcore"
path = "src/brain.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
